--- a/fin-exchange-manage/Pipfile
+++ b/fin-exchange-manage/Pipfile
@@ -13,6 +13,7 @@ psycopg2 = "*"
 long = "*"
 kwargs = "*"
 max-exchange-api-python3 = {editable = true, path = "./../max-exchange-api-python3"}
+bitfinex-api-py = "*"
 
 [dev-packages]
 
