done the record the pack info

--- a/fin-exchange-manage/Pipfile
+++ b/fin-exchange-manage/Pipfile
@@ -14,6 +14,7 @@ long = "*"
 kwargs = "*"
 max-exchange-api-python3 = {editable = true, path = "./../max-exchange-api-python3"}
 bitfinex-api-py = "*"
+attach = "*"
 
 [dev-packages]
 
