--- a/fin-exchange-manage/Pipfile
+++ b/fin-exchange-manage/Pipfile
@@ -15,6 +15,7 @@ kwargs = "*"
 max-exchange-api-python3 = {editable = true, path = "./../max-exchange-api-python3"}
 bitfinex-api-py = "*"
 attach = "*"
+day = "*"
 
 [dev-packages]
 
