add auto fund in cron/cron_settings.py

--- a/fin-exchange-manage/Pipfile
+++ b/fin-exchange-manage/Pipfile
@@ -14,7 +14,7 @@ long = "*"
 kwargs = "*"
 max-exchange-api-python3 = {editable = true, path = "./../max-exchange-api-python3"}
 bitfinex-api-py = "*"
-attach = "*"
+apscheduler = "*"
 
 [dev-packages]
 
