--- a/fin-exchange-manage/Pipfile
+++ b/fin-exchange-manage/Pipfile
@@ -16,6 +16,7 @@ max-exchange-api-python3 = {editable = true, path = "./../max-exchange-api-pytho
 bitfinex-api-py = "*"
 apscheduler = "*"
 self = "*"
+requests = "*"
 
 [dev-packages]
 
