try turn off the debug

--- a/fin-exchange-manage/Dockerfile
+++ b/fin-exchange-manage/Dockerfile
@@ -7,5 +7,5 @@ RUN pipenv install
 
 EXPOSE 5000
 ENV FLASK_APP=main
-ENV FLASK_ENV=development
+ENV FLASK_ENV=production
 CMD ["pipenv","run","flask","run","--host=0.0.0.0"]
