--- a/fin-exchange-manage/Pipfile
+++ b/fin-exchange-manage/Pipfile
@@ -14,6 +14,7 @@ max-exchange-api-python3 = {editable = true, path = "./../max-exchange-api-pytho
 bitfinex-api-py = "*"
 apscheduler = "*"
 requests = "*"
+dat = "*"
 
 [dev-packages]
 
