fix the flask issue

--- a/fin-exchange-manage/Dockerfile
+++ b/fin-exchange-manage/Dockerfile
@@ -7,4 +7,6 @@ RUN pipenv install
 
 EXPOSE 5000
 ENV FLASK_ENV=production
+ENV FLASK_APP=main
+RUN ls -al
 CMD ["pipenv","run","flask","run","--host=0.0.0.0"]
